# pomo-tracker

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  setup.sh  tasks.db
docs/: packaging.md
src/: app.py  database.py  init_db.py  model.py  setup.py  taskcli.py
src/alarm/: check_alarms.py  cli.py  service.py
src/categories/: cli.py  models.py  service.py
src/tasks/: cli.py  models.py  service.py
src/tracker/: cli.py  models.py  service.py
src/utils/: date_funcs.py  display.py
